# libcsics

./: .clangd  .gitmodules  CMakeLists.txt
cmake/: component_requirements.cmake  deps.cmake
include/csics/: Bit.hpp  Buffer.hpp  Concepts.hpp  Random.hpp  String.hpp  Types.hpp  assert.hpp  compiler.hpp  csics.hpp
include/csics/dsp/: Filters.hpp  Integrators.hpp  Transfer.hpp  dsp.hpp
include/csics/em/: ElectroMagnetics.hpp  em.hpp
include/csics/executor/: Concept.hpp  Executors.hpp  Types.hpp
include/csics/geo/: Concepts.hpp  Coordinates.hpp  Ellipsoids.hpp  Ops.hpp  geo.hpp
include/csics/io/: Buffer.hpp  io.hpp
include/csics/io/compression/: Compressor.hpp  compression.hpp
include/csics/io/encdec/: Base64.hpp  EncodeDecode.hpp  encdec.hpp
include/csics/io/net/: MQTTEndpoint.hpp  NetTypes.hpp  TCPEndpoint.hpp  UDPEndpoint.hpp  net.hpp
include/csics/io/net/message/: MQTTEndpoint.hpp  message.hpp
include/csics/io/net/stream/: Stream.hpp  StreamFuncs.hpp  TCPEndpoint.hpp
include/csics/linalg/: Complex.hpp  Concepts.hpp  Coordinates.hpp  Matrix.hpp  Ops.hpp  Vec.hpp  linalg.hpp
include/csics/lvc/: lvc.hpp
include/csics/lvc/dis/: DISDispatch.hpp  PDUs.hpp  Time.hpp  Wire.hpp  dis.hpp  serde.hpp
include/csics/queue/: SPSCMessageQueue.hpp  SPSCQueue.hpp  queue.hpp
include/csics/radio/: Common.hpp  Radio.hpp  RadioRx.hpp  radio.hpp
include/csics/serialization/: Common.hpp  Concepts.hpp  Deserializer.hpp  DirectSerializer.hpp  JSONSerializer.hpp  Serialization.hpp  Serializer.hpp  serialization.hpp
include/csics/sim/: em.hpp  sim.hpp
include/csics/sim/ecs/: Concepts.hpp  Entity.hpp  SparseSet.hpp  Traits.hpp  View.hpp  World.hpp  ecs.hpp
src/: CMakeLists.txt
src/geo/: CMakeLists.txt  Ops.cpp
src/io/: CMakeLists.txt  Compressor.cpp  ZLIBCompressor.cpp  ZLIBCompressor.hpp  ZSTDCompressor.cpp  ZSTDCompressor.hpp
src/io/encdec/: Base64Encoder.cpp
src/io/net/: CMakeLists.txt  MQTTEndpoint.cpp
src/io/net/platform/unix/: NetTypes.cpp  TCPEndpointUnix.cpp  UDPEndpointUnix.cpp
src/io/net/stream/platform/unix/: TCPEndpointUnix.cpp
src/queue/: SPSCQueue.cpp
src/radio/: CMakeLists.txt  Radio.cpp  RadioRx.cpp
src/radio/usrp/: USRPRadioRx.cpp  USRPRadioRx.hpp
src/serialization/: CMakeLists.txt  JSONSerializer.cpp
test/: CMakeLists.txt  test_utils.cpp  test_utils.hpp
test/geo/: geo_basic_tests.cpp
test/io/: base64_encoding_test.cpp  mqtt_test.cpp  zlib_compression_test.cpp  zstd_compression_test.cpp
test/linalg/: matrix_test.cpp  vec_lib_test.cpp
test/lvc/: dis7_test.cpp
test/queue/: spsc_message_queue_test.cpp  spsc_queue_test.cpp
test/radio/: uhd_test.cpp
test/serialization/: json_serialization_test.cpp
test/sim/: ecs_test.cpp
